ok maybe you gonna be the one that save me

--- a/mainpage.html
+++ b/mainpage.html
@@ -53,7 +53,7 @@
       <!-- 右上角控制區域 -->
     <div class="top-controls">
       <div class="top-controls-content">
-        <button id="language-toggle" class="language-btn">English</button>
+        <!-- <button id="language-toggle" class="language-btn">English</button> -->
         <a href="#contact" class="exhibitor-login-btn">EXHIBITOR LOGIN</a>
       </div>
     </div>
@@ -81,6 +81,7 @@
           <!-- <li><a href="#exhibitors" id="nav-exhibitors">ZINE WALL</a></li>
           <li><a href="#exhibitors" id="nav-exhibitors">ARCHIVE</a></li> -->
           <li><a href="#about" id="nav-about">ABOUT</a></li>
+          <!-- <li><a href="#about" id="nav-about">FAQ</a></li> -->
         </ul>
       </div>
     </nav>
