ok. at least this is looking professional

--- a/mainpage.html
+++ b/mainpage.html
@@ -115,7 +115,7 @@
           <!-- 按鈕區域 - 左右並排 -->
           <div class="poster-buttons-container">
             <div class="ticket-button-container">
-              <a href="https://www.taipeiartbookfair.com/2025/ticket" target="_blank" class="ticket-button">
+              <a href="ticketvisit.html" target="_blank" class="ticket-button">
                 票券＆參觀 VISIT&TICKETS
               </a>
             </div>
