--- a/mainpage.html
+++ b/mainpage.html
@@ -80,7 +80,7 @@
           </li>
           <!-- <li><a href="#exhibitors" id="nav-exhibitors">ZINE WALL</a></li>
           <li><a href="#exhibitors" id="nav-exhibitors">ARCHIVE</a></li> -->
-          <li><a href="#about" id="nav-about">ABOUT</a></li>
+          <li><a href="about.html" id="nav-about">ABOUT</a></li>
           <!-- <li><a href="#about" id="nav-about">FAQ</a></li> -->
         </ul>
       </div>
