--- a/mainpage.html
+++ b/mainpage.html
@@ -22,7 +22,7 @@
       <div class="store-modal-content">
         <span class="store-modal-close">&times;</span>
         <div class="store-modal-body">
-          <img src="image/somethingopen-rafael-rozendaal.png" alt="NMHW" class="store-modal-image">
+          <img src="image/web-book.gif" alt="NMHW" class="store-modal-image">
         </div>
       </div>
     </div>
