--- a/mainpage.html
+++ b/mainpage.html
@@ -120,9 +120,11 @@
               </a>
             </div>
             <div class="flip-button-container">
-              <button class="flip-button" id="flipIndicator">
-                <span class="flip-text">👆</span>
+              <a href="ticketvisit.html" style="text-decoration: none;">
+              <button class="flip-button">
+                <span class="flip-text" >👆</span>
               </button>
+              </a>
             </div>
           </div>
           
