Add image slider to about page, update contact email, and enhance layout with new styles

--- a/mainpage.html
+++ b/mainpage.html
@@ -54,7 +54,7 @@
     <div class="top-controls">
       <div class="top-controls-content">
         <!-- <button id="language-toggle" class="language-btn">English</button> -->
-        <a href="#contact" class="exhibitor-login-btn">EXHIBITOR LOGIN</a>
+        <a href="login.html" class="exhibitor-login-btn">EXHIBITOR LOGIN</a>
       </div>
     </div>
 
@@ -70,6 +70,7 @@
     <nav class="nav-items-area sticky-nav">
       <div class="container">
         <ul class="nav-menu">
+          <li><a href="index.html">HOME</a></li>
           <li>
             <a
               href="https://nmhw.taipeiartbookfair.com/"
@@ -206,6 +207,14 @@
           <h3>
             Upcoming Events
           </h3>
+          <div class="timeline-subscribe">
+            <p class="agenda-subscribe">
+              <a
+                href="https://calendar.google.com/calendar/u/2?cid=OTA1MjdmNjdmYTQ2MmM4M2UxODRiMGM2MmRlZjEwZWJjOGIwMGNjOGM2N2E1YjgzYWYyYWZiOTBhMWJkYjI5M0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"
+                >\Suscribe to TPABF's calendar/</a
+              >
+            </p>
+          </div>
 
           <!-- Event Type 篩選器 -->
           <div class="event-filter-header">
