Update exhibitor login button text to include Chinese translation and adjust styles for calendar mode container dimensions

--- a/mainpage.html
+++ b/mainpage.html
@@ -54,7 +54,7 @@
     <div class="top-controls">
       <div class="top-controls-content">
         <!-- <button id="language-toggle" class="language-btn">English</button> -->
-        <a href="login.html" class="exhibitor-login-btn">EXHIBITOR LOGIN</a>
+        <a href="login.html" class="exhibitor-login-btn">攤主登入｜EXHIBITOR LOGIN</a>
       </div>
     </div>
 
