--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
     <div class="top-controls">
       <div class="top-controls-content">
         <!-- <button id="language-toggle" class="language-btn">English</button> -->
-        <a href="#contact" class="exhibitor-login-btn">EXHIBITOR LOGIN</a>
+        <a href="#contact" class="exhibitor-login-btn">攤主登入｜EXHIBITOR LOGIN</a>
       </div>
     </div>
 
