--- a/ticketvisit.html
+++ b/ticketvisit.html
@@ -25,7 +25,7 @@
         
         <ul class="nav-menu">
           <li><a href="#general-info" class="nav-item">GENERAL INFO</a></li>
-          <li><a href="#access" class="nav-item">ASSESS</a></li>
+          <li><a href="#access" class="nav-item">ACCESS</a></li>
           <li><a href="#tickets" class="nav-item">TICKETS</a></li>
           <li><a href="#timeline" class="nav-item">PROGRAMS</a></li>
           <li><a href="#exhibitors" class="nav-item">EXHIBITORS</a></li>
