--- a/mainpage.html
+++ b/mainpage.html
@@ -204,9 +204,11 @@
 
         <!-- 條列模式區域 - 縮短寬度 -->
         <section class="calender-section card-section" id="calender">
-          <h3>
-            Upcoming Events
+          <a href="ticketvisit.html#exhibitors">
+            <h3>
+            FULL PROGRAM
           </h3>
+        </a>
           <div class="timeline-subscribe">
             <p class="agenda-subscribe">
               <a
