full program changes

--- a/mainpage.html
+++ b/mainpage.html
@@ -206,7 +206,7 @@
         <section class="calender-section card-section" id="calender">
           <a href="ticketvisit.html#exhibitors">
             <h3>
-            FULL PROGRAM
+            ￫ FULL PROGRAM ￩
           </h3>
         </a>
           <div class="timeline-subscribe">
