--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
     <div class="top-controls">
       <div class="top-controls-content">
         <!-- <button id="language-toggle" class="language-btn">English</button> -->
-        <a href="#contact" class="exhibitor-login-btn">攤主登入｜EXHIBITOR LOGIN</a>
+        <a href="login.taipeiartbookfair.com" class="exhibitor-login-btn">攤主登入｜EXHIBITOR LOGIN</a>
       </div>
     </div>
 
@@ -184,7 +184,7 @@
     <nav class="nav-items-area sticky-nav">
       <div class="container">
         <ul class="nav-menu">
-          <li><a href="index.html">HOME</a></li>
+          <li><a href="https://www.taipeiartbookfair.com">HOME</a></li>
           <li>
             <a
               href="https://nmhw.taipeiartbookfair.com/"
@@ -195,7 +195,7 @@
           </li>
           <!-- <li><a href="#exhibitors" id="nav-exhibitors">ZINE WALL</a></li>
           <li><a href="#exhibitors" id="nav-exhibitors">ARCHIVE</a></li> -->
-          <li><a href="about.html" id="nav-about">ABOUT</a></li>
+          <li><a href="https://about.taipeiartbookfair.com" id="nav-about">ABOUT</a></li>
           <!-- <li><a href="#about" id="nav-about">FAQ</a></li> -->
         </ul>
       </div>
