--- a/mainpage.html
+++ b/mainpage.html
@@ -54,7 +54,7 @@
     <div class="top-controls">
       <div class="top-controls-content">
         <!-- <button id="language-toggle" class="language-btn">English</button> -->
-        <a href="login.html" class="exhibitor-login-btn">攤主登入｜EXHIBITOR LOGIN</a>
+        <a href="login.taipeiartbookfair.com" class="exhibitor-login-btn">攤主登入｜EXHIBITOR LOGIN</a>
       </div>
     </div>
 
@@ -70,7 +70,7 @@
     <nav class="nav-items-area sticky-nav">
       <div class="container">
         <ul class="nav-menu">
-          <li><a href="index.html">HOME</a></li>
+          <li><a href="https://www.taipeiartbookfair.com">HOME</a></li>
           <li>
             <a
               href="https://nmhw.taipeiartbookfair.com/"
@@ -81,7 +81,7 @@
           </li>
           <!-- <li><a href="#exhibitors" id="nav-exhibitors">ZINE WALL</a></li>
           <li><a href="#exhibitors" id="nav-exhibitors">ARCHIVE</a></li> -->
-          <li><a href="about.html" id="nav-about">ABOUT</a></li>
+          <li><a href="https://about.taipeiartbookfair.com" id="nav-about">ABOUT</a></li>
           <!-- <li><a href="#about" id="nav-about">FAQ</a></li> -->
         </ul>
       </div>
@@ -116,12 +116,12 @@
           <!-- 按鈕區域 - 左右並排 -->
           <div class="poster-buttons-container">
             <div class="ticket-button-container">
-              <a href="ticketvisit.html" class="ticket-button">
+              <a href="https://visit.taipeiartbookfair.com" class="ticket-button">
                 票券＆參觀 VISIT&TICKETS
               </a>
             </div>
             <div class="flip-button-container">
-              <a href="ticketvisit.html" style="text-decoration: none;">
+              <a href="https://visit.taipeiartbookfair.com" style="text-decoration: none;">
               <button class="flip-button">
                 <span class="flip-text" >👆</span>
               </button>
@@ -204,7 +204,7 @@
 
         <!-- 條列模式區域 - 縮短寬度 -->
         <section class="calender-section card-section" id="calender">
-          <a href="ticketvisit.html#exhibitors">
+          <a href="https://visit.taipeiartbookfair.com#exhibitors">
             <h3>
             ￫ FULL PROGRAM ￩
           </h3>
@@ -445,7 +445,6 @@
     
     <script src="js/poster-flip.js"></script>
     <script src="js/calender.js"></script>
-    <script src="js/duolanguage.js"></script>
     <script src="js/mainpage_image_rotata.js"></script>
     <script src="js/homepage-zine.js"></script>
     
