--- a/ticketvisit.html
+++ b/ticketvisit.html
@@ -21,7 +21,7 @@
     <!-- 頂部導航 -->
     <nav class="top-navigation">
       <div class="nav-container">
-        <a href="https://www.taipeiartbookfair.com" class="nav-back-btn" data-zh="← 返回" data-en="← Back">← 返回</a>
+        <a href="index.html" class="nav-back-btn" data-zh="← 返回" data-en="← Back">← 返回</a>
         
         <ul class="nav-menu">
           <li><a href="#general-info" class="nav-item">GENERAL INFO</a></li>
