--- a/mainpage.html
+++ b/mainpage.html
@@ -81,7 +81,7 @@
           </li>
           <!-- <li><a href="#exhibitors" id="nav-exhibitors">ZINE WALL</a></li>
           <li><a href="#exhibitors" id="nav-exhibitors">ARCHIVE</a></li> -->
-          <li><a href="https://about.taipeiartbookfair.com" id="nav-about">ABOUT</a></li>
+          <li><a href="about.html" id="nav-about">ABOUT</a></li>
           <!-- <li><a href="#about" id="nav-about">FAQ</a></li> -->
         </ul>
       </div>
@@ -116,12 +116,12 @@
           <!-- 按鈕區域 - 左右並排 -->
           <div class="poster-buttons-container">
             <div class="ticket-button-container">
-              <a href="https://visit.taipeiartbookfair.com" class="ticket-button">
+              <a href="ticketvisit.html" class="ticket-button">
                 票券＆參觀 VISIT&TICKETS
               </a>
             </div>
             <div class="flip-button-container">
-              <a href="https://visit.taipeiartbookfair.com" style="text-decoration: none;">
+              <a href="ticketvisit.html" style="text-decoration: none;">
               <button class="flip-button">
                 <span class="flip-text" >👆</span>
               </button>
@@ -204,7 +204,7 @@
 
         <!-- 條列模式區域 - 縮短寬度 -->
         <section class="calender-section card-section" id="calender">
-          <a href="https://visit.taipeiartbookfair.com#exhibitors">
+          <a href="ticketvisit.html#exhibitors">
             <h3>
             ￫ FULL PROGRAM ￩
           </h3>
