it is such a map darling

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -911,11 +911,11 @@
                         <span class="label">攤位地圖 Booth Map</span><br /><span
                           id="booth-map-desc"
                           style="
-                            font-size: 1.5rem;
+                            font-size: 1.2rem;
                             color: black;
                             line-height: 2rem;
                           "
-                          >N/A</span
+                          ><a href="image/exhibitormap.pdf" target="_blank">下載 Download</a></span
                         >
                       </td>
                     </tr>
