--- a/ticketvisit.html
+++ b/ticketvisit.html
@@ -342,6 +342,87 @@
               A：票券請自行妥善保管，發生遺失、燒毀、破損等情形，恕不退換補發。
             </div>
           </div>
+
+          <div class="faq-item">
+            <div class="faq-question" data-zh="Q：我還可以加購工作證嗎？" data-en="Q: Can I purchase additional staff passes?">
+              Q：我還可以加購工作證嗎？
+            </div>
+            <div class="faq-answer" data-zh="A：目前不開放加購。如需入場，可至攤商管理頁面購買「親友快速通關票」。" data-en="A: Additional staff passes are currently not available. If someone needs entry, please purchase a "Fast Track Friend Pass" through the Exhibitor Management Page.">
+              A：目前不開放加購。如需入場，可至攤商管理頁面購買「親友快速通關票」。
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question" data-zh="Q：親友快速通關票怎麼買？" data-en="Q: How do I buy the Fast Track Friend Pass?">
+              Q：親友快速通關票怎麼買？
+            </div>
+            <div class="faq-answer" data-zh="A：購票時間為 11/20–11/23。請從攤商管理頁面提供的連結購買（建議由攤主統一處理），並輸入優惠代碼。每個代碼限單次下單，建議先統計數量後一次購買。" data-en="A: Sales are open from 11/20–11/23. Please use the purchase link provided in the Exhibitor Management Page (we recommend the exhibitor handle all purchases for their friends) and enter the discount code. Each code can be used for one order only, so please confirm the quantity needed before placing a single order.">
+              A：購票時間為 11/20–11/23。請從攤商管理頁面提供的連結購買（建議由攤主統一處理），並輸入優惠代碼。每個代碼限單次下單，建議先統計數量後一次購買。
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question" data-zh="Q：工作證可以讓不同人使用嗎？" data-en="Q: Can staff passes be used by different people?">
+              Q：工作證可以讓不同人使用嗎？
+            </div>
+            <div class="faq-answer" data-zh="A：可以。但活動入場以「紋身貼紙」為憑證，工作證僅作識別使用。" data-en="A: Yes. However, entry to the event requires the "tattoo sticker" as the admission credential. The staff pass is for identification only.">
+              A：可以。但活動入場以「紋身貼紙」為憑證，工作證僅作識別使用。
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question" data-zh="Q：為什麼攤商編號貼紙的字體顏色不一樣？" data-en="Q: Why are the booth number sticker text colors different?">
+              Q：為什麼攤商編號貼紙的字體顏色不一樣？
+            </div>
+            <div class="faq-answer" data-zh="A：黃色字體代表首次參與的攤商，歡迎大家多多交流！" data-en="A: Yellow text indicates exhibitors who are joining us for the first time—please feel free to say hi!">
+              A：黃色字體代表首次參與的攤商，歡迎大家多多交流！
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question" data-zh="Q：我可以換位置嗎？" data-en="Q: Can I change my booth location?">
+              Q：我可以換位置嗎？
+            </div>
+            <div class="faq-answer" data-zh="A：可以！只要雙方協調同意即可自行交換攤位位置。但官方公布的攤位地圖將不會調整。" data-en="A: Yes! As long as both parties agree, you may swap booths directly. However, the official venue map will not be updated.">
+              A：可以！只要雙方協調同意即可自行交換攤位位置。但官方公布的攤位地圖將不會調整。
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question" data-zh="Q：草率簿可以多拿幾本嗎？" data-en="Q: Can I take more copies of the Catalog?">
+              Q：草率簿可以多拿幾本嗎？
+            </div>
+            <div class="faq-answer" data-zh="A：每攤限領一本。如需額外購買，可至現場「草率大本攤」。" data-en="A: Each booth may claim one copy. Additional copies can be purchased at the "NMHW by TPABF" onsite.">
+              A：每攤限領一本。如需額外購買，可至現場「草率大本攤」。
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question" data-zh="Q：材料區怎麼沒有多餘的佈置材料？" data-en="Q: Why are there no extra materials in the materials area?">
+              Q：材料區怎麼沒有多餘的佈置材料？
+            </div>
+            <div class="faq-answer" data-zh="A：現場僅提供少量可自取的佈置材料，數量有限、恕不補充，請酌量使用。" data-en="A: Only a limited amount of booth-decoration materials will be provided onsite. Please take only what you need—quantities are limited and will not be replenished.">
+              A：現場僅提供少量可自取的佈置材料，數量有限、恕不補充，請酌量使用。
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question" data-zh="Q：我想在 NMHW 寄賣書籍，可以嗎？" data-en="Q: I'd like to consign books at NMHW as well. Is that possible?">
+              Q：我想在 NMHW 寄賣書籍，可以嗎？
+            </div>
+            <div class="faq-answer" data-zh="A：11/23 16:00 後，我們僅接受先前有填寫表單的寄售攤商交付未售完書籍，不開放臨時加收品項喔。" data-en="A: After 16:00 on 11/23, we will only accept unsold books from exhibitors who previously submitted the consignment form. We are unable to accept any additional or last-minute items.">
+              A：11/23 16:00 後，我們僅接受先前有填寫表單的寄售攤商交付未售完書籍，不開放臨時加收品項喔。
+            </div>
+          </div>
+
+          <div class="faq-item">
+            <div class="faq-question" data-zh="Q：我也想參明年草率季十週年！！" data-en="Q: I want to join the 10th Anniversary edition of TPABF next year!">
+              Q：我也想參明年草率季十週年！！
+            </div>
+            <div class="faq-answer" data-zh="A：即日起至 11 月 23 日 <a href='https://docs.google.com/forms/d/e/1FAIpQLSdX8IoYUCzD4RHkmqq60va11vtOdfPDMDnwPArOY0UZT9vltg/viewform' target='_blank'>點此表單</a> 勾選「＊2026十週年報名我要參加＊」將直接獲取錄取資格。並維持與2025年相同之攤位費用。" data-en="A: From now until November 23rd, you may <a href='https://docs.google.com/forms/d/e/1FAIpQLSdX8IoYUCzD4RHkmqq60va11vtOdfPDMDnwPArOY0UZT9vltg/viewform' target='_blank'>fill out this form</a> and check "＊I want to join the 2026 10th Anniversary＊" to secure your spot. The booth fee will be the same as in 2025.">
+              A：即日起至 11 月 23 日 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdX8IoYUCzD4RHkmqq60va11vtOdfPDMDnwPArOY0UZT9vltg/viewform" target="_blank">點此表單</a> 勾選「＊2026十週年報名我要參加＊」將直接獲取錄取資格。並維持與2025年相同之攤位費用。
+            </div>
+          </div>
       </div>
       </div>
     </section>
