--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1552,10 +1552,10 @@
                     <span id="ticket-discountcode"></span>
                     <br /><br />
                     <a
-                      href="https://tour.ibon.com.tw/event/e2508000034ilw7"
+                      href="https://tour.ibon.com.tw/event/e2508000035koaw"
                       target="_blank"
                       id="ticket-link"
-                      >購票連結</a
+                      >快速通關票購票連結</a
                     >
                   </div>
                 </td>
