ok. let's commit

--- a/application-received.html
+++ b/application-received.html
@@ -41,25 +41,9 @@
         margin: 1rem;
         border-radius: 1rem;
       "
-    >
-      我們已經收到您的申請，感謝您的報名。您將收到一封自動確認電子郵件，如果您沒有收到電子郵件，請檢查您的垃圾信箱。<span
-        style="color: red"
-        >若過了一天沒收到確認信，請用<b>瀏覽器的「無痕模式」</b>再填一次。</span
-      >如果有需要修改資料，請重新報名。<br />
-      Application Received. Thank you for submitting your application, we have
-      successfully received your response. You will receive an automated
-      confirmation email. If you do not receive the email, please check your
-      spam folder.
-      <span style="color: red">
-        If you still haven't received it after a day, please submit the form
-        again using <b>incognito mode</b> in your browser.</span
-      >
-      If you need to modify your information, please fill in the registration
-      form again. <br /><br />
-
-      完整的參展名單將從九月開始，陸續在我們的官方網站和社群平台上公布。<br />The
-      complete list of exhibitors will gradually be announced on our official
-      website and social media platforms starting in September.
+    >我們已收到您的申請，感謝您的報名！請務必留意，您將在 <b>24 小時</b>內收到自動確認電子郵件；若未收到，請先檢查垃圾信箱，仍未收到則請使用瀏覽器的<b>「無痕模式」</b>重新填寫表單。<span style="color: red">**切記：收到確認信才代表報名成功。**</span>若需修改資料，請重新報名並以最新提交內容為準。<br />
+    We have received your application—thank you for registering! Please note that you will receive an automatic confirmation email within <b>24 hours</b>. If you do not see it, please check your spam folder; if it still hasn’t arrived, please fill out the form again using your browser’s <b>「Incognito/Private mode」</b>. <span style="color: red">Please remember: your registration is only confirmed once you receive the confirmation email.</span> If you need to update any information, please submit a new application, and the latest submission will be used.
+    <br /><br />
       <br /><br /><span style="position: relative">
         <a href="index.html"
           ><button
