--- a/login.html
+++ b/login.html
@@ -196,6 +196,7 @@
         text-align: center;
         font-weight: 500;
         cursor: pointer;
+        z-index: 1000;
       }
       ::selection {
         color: palegreen;
@@ -211,9 +212,30 @@
         font-size: 1.2rem;
         text-shadow: 2px 1px 0 blue, -0.5px -0.5px 0 blueviolet;
       }
+      .undermaintenance {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 1);
+        z-index: 1000;
+      }
+
+      .undermaintenance p {
+        color: white;
+        font-size: 1rem;
+        text-align: center;
+        margin-top: 20%;
+      }
+
     </style>
   </head>
   <body>
+    <div class="undermaintenance">
+      <p>徵件期間，攤商管理頁面暫停開放。<br />
+        The exhibitor management page will be temporarily closed during the open-call period.<br />
+    </div>
     <img
       draggable="false"
       (dragstart)="false;"
