booth type renew

--- a/localapplication.html
+++ b/localapplication.html
@@ -437,7 +437,7 @@
             class="form-input-radio"
             name="entry.133172086"
             id="PreferredBoothType_CurationBooth"
-            value="策展攤"
+            value="策展"
             required
           />
           <label for="PreferredBoothType_CurationBooth" class="form-label">
