--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -384,7 +384,7 @@
             class="form-input-radio"
             name="entry.133172086"
             id="PreferredBoothType_LargeBookStalls"
-            value="書攤"
+            value="Regular Book Booth"
             required
           />
           <label for="PreferredBoothType_LargeBookStalls" class="form-label">
@@ -403,7 +403,7 @@
             class="form-input-radio"
             name="entry.133172086"
             id="PreferredBoothType_CreativeProducts"
-            value="創作商品"
+            value="Regular Non-Book Booth"
             required
           />
           <label for="PreferredBoothType_CreativeProducts" class="form-label">
@@ -423,7 +423,7 @@
             class="form-input-radio"
             name="entry.133172086"
             id="PreferredBoothType_Curation"
-            value="裝置類"
+            value="Installation Booth"
             required
           />
           <label for="PreferredBoothType_Curation" class="form-label">
@@ -443,7 +443,7 @@
             class="form-input-radio"
             name="entry.133172086"
             id="PreferredBoothType_CurationBooth"
-            value="策展攤"
+            value="Curation Booth"
             required
           />
           <label for="PreferredBoothType_CurationBooth" class="form-label">
