--- a/opencall.html
+++ b/opencall.html
@@ -141,6 +141,7 @@
 
       .deadline-highlight {
         border: 1.5px solid #e53935;
+        color: orangered;
         padding: 1px 12px;
         margin: 2px 0;
         display: inline-block;
@@ -413,7 +414,7 @@
           <br />
           <h3>申請時程</h3>
           <p>
-            申請截止：12月18日（四）24:00<br />
+            <span class="deadline-highlight"><strong>申請截止: 12月18日（四）24:00</strong></span><br />
             審核通知：12月25日（四）18:00前<br />
             &nbsp;&nbsp;&nbsp; &bull; 通過者須於 1月1日（四）24:00 前付款<br />
           </p>
@@ -525,7 +526,7 @@
           <br />
           <h3>Deadline</h3>
           <p>
-            Application Deadline: December 18 (Thu) 24:00 (GMT+8)<br />
+            <span class="deadline-highlight"><strong>Application Deadline: December 18 (Thu) 24:00 (GMT+8)</strong></span><br />
             Notification of Results: Before December 25 (Thu) 18:00 (GMT+8)<br />
             &nbsp;&nbsp;&nbsp; &bull; Accepted applicants must complete payment by January 1 (Thu.) 24:00 (GMT+8)
           </p>
@@ -605,7 +606,9 @@
       </div>
     </div>
 
+
     <!-- 國籍選擇表單 - 固定在底部 -->
+<!--      
     <div class="form-section">
       <div class="form-wrapper">
         <form id="nationality-form" class="selection-form">
@@ -815,7 +818,7 @@
           <button type="submit">繼續 Continue</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <script>
       document
