--- a/opencall.html
+++ b/opencall.html
@@ -373,6 +373,7 @@
     </style>
   </head>
   <body>
+    <!-- it's close -->
     <a href="index.html"><div class="back">回主頁 Back</div></a>
 
     <!-- 語言快捷鍵（手機版） -->
