--- a/login.html
+++ b/login.html
@@ -232,10 +232,10 @@
     </style>
   </head>
   <body>
-    <div class="undermaintenance">
+    <!-- <div class="undermaintenance">
       <p>徵件期間，攤商管理頁面暫停開放。<br />
         The exhibitor management page will be temporarily closed during the open-call period.<br />
-    </div>
+    </div> -->
     <img
       draggable="false"
       (dragstart)="false;"
